// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<header
  class="Header"
>
  <div
    class="Header-Row"
  >
    <div
      class="Header-Title"
    >
      <img
        alt="PolySwarm logo"
        class="Header-Logo"
        src="../public/img/polyswarm-white.svg"
      >
        
      </img>
      <h3>
        
      </h3>
      <span
        class="RequestSpinner"
      >
        
      </span>
    </div>
    <div
      class="Header-Actions"
    >
      
    </div>
  </div>
  <div
    class="Header-Address"
  >
    <p
      class="Header-Divided"
      style="font-size:7.0588235294117645vw"
    >
      author
    </p>
    <p
      class="Header-Divided"
      style="font-size:7.0588235294117645vw"
    >
      1 NCT 
    </p>
    <p
      style="font-size:7.0588235294117645vw"
    >
      1 ETH
    </p>
  </div>
</header>
`;

exports[`should show back button when back is set 1`] = `null`;

exports[`should show polyswarm logo when back is not set 1`] = `null`;

exports[`should show the address and balances 1`] = `
<header
  class="Header"
>
  <div
    class="Header-Row"
  >
    <div
      class="Header-Title"
    >
      <img
        alt="PolySwarm logo"
        class="Header-Logo"
        src="../public/img/polyswarm-white.svg"
      >
        
      </img>
      <h3>
        
      </h3>
      <span
        class="RequestSpinner"
      >
        
      </span>
    </div>
    <div
      class="Header-Actions"
    >
      
    </div>
  </div>
  <div
    class="Header-Address"
  >
    <p
      class="Header-Divided"
      style="font-size:7.0588235294117645vw"
    >
      author
    </p>
    <p
      class="Header-Divided"
      style="font-size:7.0588235294117645vw"
    >
      1 NCT 
    </p>
    <p
      style="font-size:7.0588235294117645vw"
    >
      1 ETH
    </p>
  </div>
</header>
`;

exports[`shows title props 1`] = `
<header
  class="Header"
>
  <div
    class="Header-Row"
  >
    <div
      class="Header-Title"
    >
      <img
        alt="PolySwarm logo"
        class="Header-Logo"
        src="../public/img/polyswarm-white.svg"
      >
        
      </img>
      <h3>
        Title
      </h3>
      <span
        class="RequestSpinner"
      >
        
      </span>
    </div>
    <div
      class="Header-Actions"
    >
      
    </div>
  </div>
  <div
    class="Header-Address"
  >
    <p
      class="Header-Divided"
      style="font-size:7.0588235294117645vw"
    >
      author
    </p>
    <p
      class="Header-Divided"
      style="font-size:7.0588235294117645vw"
    >
      1 NCT 
    </p>
    <p
      style="font-size:7.0588235294117645vw"
    >
      1 ETH
    </p>
  </div>
</header>
`;
